--- a/advance/doc/1.md
+++ b/advance/doc/1.md
@@ -1086,8 +1086,22 @@ goroutine的调度核心在schedule方法，当一个M启动之后，会触发sc
 此外，除了goroutine正常执行完触发goexit的执行进而触发再调度之外，还有以下其他的方式去触发：
 
 - gopark：主动挂起方法，会触发dropg方法解绑G和P，然后调用schedule触发再调度。
-- 执行系统调用：会挂起当前G，让M去执行syscall，然后给P分配新的M；等到执行syscall的M返回，会为G分配P，触发再调度等待调度。
+- 执行系统调用：会挂起当前G，让M去执行syscall，然后给P分配新的M(不是立即的)；等到执行syscall的M返回，会为G分配P，触发再调度等待调度。
 - 抢占式调度：挂起当前G，触发再调度。
+
+这里需要说一下，对于系统调用，Go会对调用进行包装，使其成为：
+
+``` go
+func syscall_syscall6(fn, a1, a2, a3, a4, a5, a6 uintptr) (r1, r2, err uintptr) {
+	args := struct{ fn, a1, a2, a3, a4, a5, a6, r1, r2, err uintptr }{fn, a1, a2, a3, a4, a5, a6, r1, r2, err}
+	entersyscall()
+	libcCall(unsafe.Pointer(abi.FuncPCABI0(syscall6)), unsafe.Pointer(&args))
+	exitsyscall()
+	return args.r1, args.r2, args.err
+}
+```
+
+这样的形式，其中entersyscall()会保存goroutine上下文，当系统调用返回之后，exitsyscall()会恢复上下文并调用schedule()方法进行再调度。
 
 上述函数多吗？其实不多，源码大概有二三十个，我尽可能压缩多个函数成一段话，然后给出一个笼统的执行机制，从这种角度来看，Go的调度，goroutine的实现可以很难，也可以很简单，因为现在我们确实理顺了它整个的执行过程，但是很多细节处理，以及性能优化，则是我们无法触及的。这一节我写了三天，引用了很多文章，现在要破例给出链接，因为我也可能在未来的某一天记混了某些概念和原理：
 
@@ -1187,6 +1201,18 @@ wait，在源码里又叫netpoll，算是核心方法了，实现不算复杂：
 在schedule里会进行netpoll的调用，并设置超时时间，这里的超时时间也很有意思，还记得我们在定时器一节提到过定时器和NetPoll的梦幻联动吗？这里的**超时时间**，就是**整个程序中最早执行的定时器的到期时间**。这样当定时器到时，schedule获得执行，后续的checkTimers也会得到执行。
 
 NetPoll还有一个唤醒方法，也是很直白的：直接向通道的写端写数据即可。这样就可以触发epoll的唤醒，原理就是epoll监控的一个读fd变成可读的了。
+
+## 系统监控
+
+Go程序在启动时，会单独开辟一个M去执行sysmon方法，即执行系统监控。这里的sysmon是不需要P来作为处理器的，它是直接跑在额外的M上。
+
+系统监控程序会做如下一些工作：
+
+- 检查系统是否存在死锁：检查的策略很直白，就是看有没有活跃线程，如果没有，看是否有活跃的，就绪的，和执行系统调用的goroutine，存在的话就是存在死锁，否则就是正常的；即系统存在活跃线程或者系统所有的goroutine和线程都不活跃；
+- 运行定时器：获取整个系统最早的定时器，然后判断时间是否需要执行，如果时间还早，则把sysmon挂起间隔的时间；此段会在无充足P的情况下开辟新的线程去运行定时器；
+- 轮训网络：判断距离上次轮训时间是否过了超过10ms，如果是，则非阻塞NetPoll获取就绪事件；这里需要说明一下为什么schedule已经可以轮训了，sysmon还要再来一次，是因为goroutine最长运行时间是10ms，如果恰好在距离上次轮训之后超过了10ms，而所有的P都在忙于执行用户goroutine，则schedule将无法被执行，此时为了及时处理就绪的事件，sysmon将负责接手，然后决定是添加至P的队列中还是开辟新的线程去运行。
+- 抢占处理器：对于运行时间超过10ms的goroutine，会触发对它的抢占，然后调度其他的goroutine，而对于执行系统调用的goroutine，则需要满足：当前P的任务队列不为空或不存在空闲的P，且时间超过10ms，会把P和M分离，让当前的M去执行系统调用，然后让新的M去执行P。
+- 垃圾回收：？
 
 ## 垃圾回收
 
