--- a/advance/doc/1.md
+++ b/advance/doc/1.md
@@ -1375,4 +1375,67 @@ type heapArena struct {
 
 ## 垃圾回收
 
+Go的垃圾回收实现起来比较直白，相比较于Java而言，不必担心内存整理的问题，这里需要提及一下为什么不需要内存整理。Go的对于对象内存的申请是通过mspan来保存的，而当对象不再使用时，简单释放它在mspan占用的空间即可，更新bitMap，此时mspan就多了一个可用object；然后这个空间就可以立即被另一个想要申请同样大小的对象使用，即空间的复用。所以完全没必要去整理，简单释放，下次申请直接找有空闲object的mspan即可。
+
+Go对于对象存活标记使用了三色标记算法，这个算法和Java如出一辙，这里就不展开介绍了，此外，Go的GCRoots定义也和Java类似，即全局变量，栈上的对象，栈上的局部变量等。
+
+这里需要说一下Go的逃逸分析，对于不会逃逸出当前方法的对象，Go会把它分配在栈上(除非特别大)，这样可以利用栈的特性完成回收。
+
+为了实现并发回收，这里依旧采用了内存屏障技术，不过因为读操作太过于频繁，取而代之的是写屏障，写屏障这里分为两种：插入写屏障和删除写屏障。
+
+在正式展开写屏障之前，先理解为什么要使用屏障。在三色标记算法中，为了避免黑色对象引用了不存活对象进而导致空指针，我们发现只要**实现以下两种规定之一即可满足要求**：
+
+- 黑色对象不可以直接引用白色对象。因为黑色对象不会再触发以它为起点的引用链分析，所以白色对象永远不会被扫描，所以要禁止这种直接引用。
+- 被引用的白色对象被某一灰色对象间接/直接引用。因为存在引用链，且扫描是从灰色对象开始的，所以白色对象最后总是可以被扫描到。
+
+而插入写屏障实现了第一个规定，删除写屏障实现了第二个规定。
+
+在这里我解释一下为什么把被删除的引用关系指向的对象变灰可以保活新的对象。在一个内存图中，如果对象A引用对象B，在对象B不是新建的情况下，必然存在一个对象C曾经或现在引用着对象B，然后A通过C获得了对象B的地址。因为对象A不可能凭空任意引用某一对象，在不借助引用传值的情况下，它无法获取B的内存地址，甚至无法感知对象B的存在。而且**对象C一定被对象A间接或直接引用**，否则对象A不可能通过C获得B，**删除写屏障就是保证了A到C关系链不会断**，即C被直接或间接变灰。因为删除写从执行总体上来看，相当于实现了原始内存快照，在遍历完成之后对象之间的引用关系可能变化，但是被删除引用关系的对象依旧存活。以上是个人理解。
+
+在实践中，插入写屏障还是一种比较耗性能的操作，所以如果对栈对象执行插入写屏障，会很影响性能，因为一个Go程序一般有很多Goroutine，这些Goroutine又有很多的对象，而且！这些对象是在变化的，Goroutine伴随着函数调用也在变化，所以追踪Goroutine的对象变化，建立写屏障不太现实。
+
+但是我们又想让goroutine运行，还有想保证对象引用分析的正确性，那该怎么办呢？1.7之前的版本实现很简单，就是标记阶段完成之后(之后就是清理阶段)，暂停程序，然后重新扫描即可，这在goroutine很多时会导致很长时间的STW。
+
+1.8之后，选择了比较粗暴的做法，使用混合写屏障，即被删除引用和新添加的引用都变成灰色的，然后扫描所有的goroutine，把所有的栈对象全部变黑，即全部保活，然后**新创建的对象，无论是栈对象还是堆对象全部变黑**，这样就不用重新扫描了，而且此时是挨个扫描goroutine的，并不是一次性暂停完整个程序。而栈对象对于堆对象引用的变化可以被混合写屏障感知并更新。
+
+Go的垃圾回收阶段分为：
+
+- 清理终止：清理上次GC标记出的垃圾，因为Go是延迟清理机制，标记完之后不会立即或者不会全部清理垃圾；**暂停程序**，这里通过安全点(协作式)实现，或者信号机制强制暂停，前面关于调度已经提到过。
+- 标记阶段：切换GC状态为GCMark，开启混合写屏障；把栈对象变黑，入队GCRoots；**继续程序**；辅助标记的用户程序会被调度；扫描栈，对于栈的扫描会暂停当前处理器；根据GCRoots对堆对象执行三色标记。
+- 标记终止：清理处理器缓存，**暂停程序**；切换GC状态为GCMarkTermination，关闭辅助标记的用户程序。
+- 清理阶段：切换GC状态为GCOff，关闭混合写屏障；**继续程序**；后台清理垃圾。
+
+上面只是一个概括，里面涉及到了太多的细节，下面会展开论述。
+
+对于写屏障的开启和关闭，是通过一个全局字段控制的，实现类似如下：
+
+``` go
+if writeBarrier.enabled {
+  gcWriteBarrier(ptr, val)
+} else {
+  *ptr = val
+}
+```
+
+垃圾收集的触发一般来说有三种方式：
+
+- 用户主动调用GC方法：如果当前没有垃圾收集循环在运行 => 触发垃圾收集。
+- sysmon唤醒垃圾收集goroutine：测试当前环境是否有必要进行收集 => 触发垃圾收集。
+- 分配内存：当构建大对象(一定)/从中心缓存或者堆申请mspan时(可能) => 判断是否有必要触发 => 触发垃圾收集。
+
+垃圾收集启动的核心方法是gcStart()，这个方法比较复杂，但会按照上面提及的四个阶段进行：
+
+- 两次判断是否满足回收条件。
+- 清理上次GC的垃圾。
+- 暂停程序，处理GCRoots；启动后台标记goroutine。
+- 继续程序，后台并发扫描和标记。
+
+扫描goroutine会暂停P，防止P上的goroutine运行，因为存在逃逸分析，所以不用担心跨goroutine栈引用，也不可能发生这样的引用。处理完栈，启动程序，P运行后台扫描程序，扫描堆。
+
+当所有的后台扫描goroutine完成之后，进入MarkTermination阶段。
+
+这里还会对运行时申请内存太快的goroutine作出限制，防止回收速度跟不上。
+
+此外，清理终止和清理阶段其实都是GCOff控制的，所以Go的GC状态码只有三个。
+
 ## 远程调用
