--- a/advance/doc/1.md
+++ b/advance/doc/1.md
@@ -1438,4 +1438,34 @@ if writeBarrier.enabled {
 
 此外，清理终止和清理阶段其实都是GCOff控制的，所以Go的GC状态码只有三个。
 
+## 栈
+
+Go的栈是动态大小的，我们在这里简要的介绍一下Go的栈细节。
+
+在早期的版本中，Go的栈是分段栈，顾名思义，就是类似链表，一个goroutine的栈会随着调用的增加开辟新的空间，然后这些栈空间通过链表指针连接起来。
+
+这种方式有一些弊端：
+
+- 需要在扩容时插入扩容和链接代码实现空间扩展，带来一定的性能损失
+- 如果当前剩余的空间刚好不是很多，则每次调用再返回都会触发扩张和收缩，这在for循环中调用会引起很大的性能问题，俗称“热分裂”
+
+后期Go采用了连续栈的方式来处理栈扩缩，动态栈就像一个slice，大小可变化，同时新的栈空间是原本的栈空间的副本，接着释放原本的栈空间。在处理扩缩时，只有一个最关键的问题，就是指向栈上地址的指针的处理，在讨论这一点之前，先来看看逃逸分析。
+
+逃逸分析就是通过抽象语法树在编译时分析栈上变量存活作用域以此来决定是否将对象分配在当前栈帧还是堆内存上。Go的逃逸分析遵循以下两个不变性：
+
+- 堆对象不可以引用栈对象
+- 栈对象不可以引用后续栈帧上的栈对象
+
+基于这两个原则，我们可以知道，所有的栈指针一定是指向堆或者指向当前/更早栈帧的；所以在处理栈复制时，计算新的栈和旧的栈的起始地址差值，然后加到所有引用了栈上对象的指针上即可。
+
+现在来看看栈的相关操作：初始化，扩容和缩容。
+
+首先是初始化，初始化操作会根据栈的大小分为普通栈分配和大栈分配(> 32KB)。对于大栈分配，会尝试从全局变量stackLarge中获取缓存空间，如果失败则去堆空间申请内存。
+
+对于普通栈分配，则是会尝试用全局栈缓存stackpool分配，这会涉及到加锁操作。而如果stackpool没有的话，则会去每个线程独有的缓存列表获取，如果还是没有，则触发内存分配。
+
+对于栈的扩容，是通过runtime.morestack来完成的，此方法会检查剩余的栈空间是否满足当前函数调用的需求，如果不满足，则扩容二倍。morestack一般来说是编译器加入在函数调用之前的一个方法，但是不是所有的函数调用都会触发栈空间检查，为了性能，可以在方法前标记关闭检查来禁用检查操作。
+
+栈的缩容一般是GC触发，缩容规则是如果当前已用空间不足总空间的1/4，则缩容至1/2。这样可以有效减少热分裂。在发生栈的扩容和缩容之后，都会发生栈复制，而栈复制涉及到对于栈指针的处理，在上面我们已经论述过了。
+
 ## 远程调用
