更新了错别字

--- a/advance/doc/1.md
+++ b/advance/doc/1.md
@@ -99,6 +99,8 @@ func run() {
 
 ![](go_struct_memory.svg)
 
+对齐遵循一个原则：**在不浪费空间的情况下减少依次读取结构体所有字段的访问次数**。
+
 这里说一下空结构体，空结构体本身不占内存，所以在最前面时不占空间，但是如果空结构体在结构体最后，同时此时没有触发内存对齐，就会**触发编译器的强制对齐，目的是防止访问到下一个内存区域**。
 
 所以结构体对象可以通过**合理排列字段，来实现更好地内存利用**。
