更改了错别字

--- a/advance/doc/1.md
+++ b/advance/doc/1.md
@@ -478,7 +478,7 @@ func chanrecv(channel *hchan, distinctionPtr unsafe.Pointer, isBlock bool) (sele
 
 - 如果发送队列不为空，说明即使有缓冲区，也满了；如果有缓冲区，我们直接读取缓冲区，然后把队头发送者的值追加到缓冲区(因为这时刚好空出来一个嘛)，如果没有缓冲区，直接读取队头的值；上述过程之后**都要把队头设置到当前goroutine的runnext上进行未来唤醒**。
 
-其他的都大同小异，顺便一提，**chansend和chanrecv都是会加锁的**。
+其他的都大同小异，顺便一提，**chansend和chanrecv在操作的一开始都是会加锁的**。
 
 这里再提一下close一个chan会发生什么：此时会遍历接收队列，然后对每一个接收队列的sudog的elem置为nil，然后设置对应的goroutine为可运行状态，等待调度，所以close可以被所有的接收者响应就是这么回事。
 
