更新了错别字

--- a/advance/doc/1.md
+++ b/advance/doc/1.md
@@ -590,7 +590,7 @@ func selectgo(caseArrayPtr *scase, orderArrayPtr *uint16, pc0 *uintptr, nsends, 
 
 ![](./select_chan.svg)
 
-## defer = panic/recovery; make = new
+## defer & panic/recovery; make & new
 
 回首思考Go的一些语言特性，我们想到了标题的这些关键词，现在来好好看看它们的实现，并借此加深对它们的理解。
 
