--- a/advance/doc/1.md
+++ b/advance/doc/1.md
@@ -603,7 +603,7 @@ func selectgo(caseArrayPtr *scase, orderArrayPtr *uint16, pc0 *uintptr, nsends, 
 
 注意，“创建了一个返回变量”这句话很重要。因为Go在return之前，会把返回值赋值给返回变量，返回变量可以看成是保存返回值的空间，然后编译器会把这里面保存的值写入到主调函数的栈返回值空间，所以**唯有把返回值赋给了返回变量才会真的写入到主调函数栈空间上的返回值里去**；或者说**主调函数得到返回值会通过读取返回变量来实现**。
 
-而**裸返回则会因为没有返回变量，而通过编译器在return语句之前创建一个ret变量作为返回变量**。或者说，会在RET(这是汇编级别的返回)语句之前，把返回值拷贝到主调函数的栈空间上。
+而**裸返回则会因为没有返回变量，而通过编译器在return语句之前创建一个ret变量作为返回变量**。
 
 此外，defer有一个需要注意的点就是对于被延迟执行的函数，其**参数**是在**defer定义的时候**以值传递(Go都是值传递)的形式拷贝到参数空间中去的。这意味着，如果**试图读取主函数defer之后的变量值，是无法读取到的**。如果使用匿名函数，则会把参数传递延迟到执行时，函数的参数会因为匿名函数捕获而得到更新。
 
