更新了细节

--- a/advance/doc/1.md
+++ b/advance/doc/1.md
@@ -568,13 +568,15 @@ func selectgo(caseArrayPtr *scase, orderArrayPtr *uint16, pc0 *uintptr, nsends, 
 
 - 处理完成后，解锁所有的chan；
 
-- 如果所有的chan都没就绪，把当前goroutine加入到每一个chan的对应操作队列中去；
+- 如果所有的chan都没就绪，把当前goroutine加入到每一个chan的对应操作队列中去，这里的实现细节大概是构造sudog，添加sudog到对应的阻塞队列，然后把sudog添加到goroutine的waiting链表尾，所以这里也可以看出添加至阻塞队列的操作是按照地址序完成的，且每一个sudog都通过链表连接起来；
 
 - 解锁所有的chan，park当前goroutine；
 
-- 当前goroutine被重新调度(见上面如何被调度)，对所有chan枷锁；
+- 当前goroutine被重新调度(见上面如何被调度)，对所有chan加锁；
 
-- 根据**地址序**遍历case，找到唤醒当前goroutine的chan，也就找到了它对应的case；
+- 被唤醒的goroutine的param字段会被唤醒者设置成就绪的sudog；
+
+- 根据**地址序**遍历scase数组，每次遍历对比waiting == param，如果是，则说明找到了，如果不是，继续下一个且waiting队首出队；
 
 - 移除所有其他的chan上阻塞的goroutine(因为每次只处理一个，所以这次移除下次循环还会加回来，但是如果不移除就会触发重复bug)
 
