更新了细节

--- a/advance/doc/1.md
+++ b/advance/doc/1.md
@@ -651,7 +651,7 @@ panic用于程序的崩溃，它会改变程序的执行流，但是如果通过
 - 循环结束后，会根据panic变量是否为空决定是否继续外泄。
 - 对于defer变量的调用，包括把defer的匿名函数中的recovery()转换成gorecovery调用，这个调用相当简单，就是判断当前goroutine是否为空，如果不是，则返回panic参数，并设置panic变量的recovered为true，表示已恢复，这样在循环中的调用就会知道panic已经被恢复了，便不需要继续外泄。
 
-所以panic之后，只会调用defer，所以recovery()只有在defer中才会生效；而如果panic变量不存在当前goroutine的/_panic链表中，recovery()则会返回nil。
+所以panic之后，只会调用defer，所以recovery()只有在defer中才会生效；而如果panic变量不存在当前goroutine的\_panic链表中，recovery()则会返回nil。
 
 new适用于分配内存空间并赋零值，返回一个指向此空间的指针；make用于构建内建类型，比如slice，chan，map等，返回一个结构体实例。
 
