更新了细节

--- a/advance/doc/1.md
+++ b/advance/doc/1.md
@@ -720,7 +720,7 @@ Mutex的实现也比较简单，这里大致提一下，首先是锁的获取：
 
 - 尝试直接CAS替换为锁定状态，成功则返回，失败则进去slowLock方法；
 - 在一个大循环中执行一些操作，循环开始；
-- 判断mutex是否是饥饿的，和是否允许自旋，如果允许，则自旋四次，同时执行30从PAUSE指令；**每次都会设置锁状态，告诉锁拥有者释放锁不要唤醒其他的goroutine，让我来做下一个拥有锁的goroutine**；
+- 判断mutex是否是饥饿的 && 是否允许自旋，如果为真，则自旋四次，同时执行30从PAUSE指令；**每次都会设置锁状态，告诉锁拥有者释放锁不要唤醒其他的goroutine，让我来做下一个拥有锁的goroutine**；
 - 自旋过后，或者不能自旋则来到这一步，在这里会设置锁状态，比如唤醒状态，当前等待锁的goroutine个数等，都是对state的记录；
 - CAS更新刚刚记录的state，成功则返回，失败则记录当前时间，调用semacquiremutex方法挂起当前gouroutine，等待唤醒；
 - 过了不知道多久被唤醒了；
