更新了细节

--- a/advance/doc/1.md
+++ b/advance/doc/1.md
@@ -1093,7 +1093,7 @@ var (
 )
 ```
 
-我们可以看到，P列表时固定大小的(启动时会进行截断处理且后续不会更改)，且这里有且只有一个sched，说明Go程序只会通过一个全局调度记录表来作为记录，注意这里是记录，因为G的调度实际是由每个M的G0来实现的。
+我们可以看到，P列表是固定大小的(启动时会进行截断处理且后续不会更改)，且这里有且只有一个sched，说明Go程序只会通过一个全局调度记录表来作为记录，注意这里是记录，因为G的调度实际是由每个M的G0来实现的。
 
 这里面提到了G0个G，G0的栈称为“系统栈”，用户goroutine的调度需要在系统栈完成，所以每次调度涉及到栈的切换。其实栈的切换不是什么很高大上的事，就是当前执行的代码使用的栈空间变成了G0的而已，切换到用户栈就是使用G的栈去执行，或者说某个方法它的栈就是在G0上的，那么跳转到这个方法去执行就是切换到了G0栈。
 
@@ -1227,6 +1227,8 @@ wait，在源码里又叫netpoll，算是核心方法了，实现不算复杂：
 - 遍历返回的epollevent数组，剔除data为空的，把得到的epollevent里保存的goroutine添加至就绪列表，如果读写同时就绪，则添加两次，同时更新goroutine状态为Ready，等待调度。
 
 在schedule里会进行netpoll的调用，并设置超时时间，这里的超时时间也很有意思，还记得我们在定时器一节提到过定时器和NetPoll的梦幻联动吗？这里的**超时时间**，就是**整个程序中最早执行的定时器的到期时间**。这样当定时器到时，schedule获得执行，后续的checkTimers也会得到执行。
+
+这里需要特别说明一下，对于netpoll的调用，是在findrunnable中执行的，且仅在找不到可执行G时执行，也就是此时P实在闲得不行，才会调用netpoll阻塞等待，不然直接阻塞会影响可运行G的执行不是吗？后面的sysmon就是在P忙得不行时接手对于netpoll的轮询。
 
 NetPoll还有一个唤醒方法，也是很直白的：直接向通道的写端写数据即可。这样就可以触发epoll的唤醒，原理就是epoll监控的一个读fd变成可读的了。
 
