更新了细节

--- a/advance/doc/1.md
+++ b/advance/doc/1.md
@@ -1105,7 +1105,7 @@ goroutine的调度核心在schedule方法，当一个M启动之后，会触发sc
 - procresize：根据NCPU重新**调整P列表的大小**，并实例化所有的P；判断M0是否拥有P，没有的话**P[0]分配给M0**，并设置P的状态为running，把**其他的P添加到空闲P列表**。
 - newproc：**go关键字的函数语义**；尝试进行main goroutine的执行，会触发main goroutine的创建，进而转换成对于newproc的调用；此函数会在**把栈切换至系统栈**并调用newproc1，对其传参为go关键字后面的函数，即需要在新的goroutine执行的函数，参数地址，参数数量，调用者G，函数起始PC。
 - newproc1：尝试从当前P的G缓存获取，获取不到去全局G缓存，还是获取不到，新建一个G；计算参数需要的栈空间，分配2KB大小的栈内存，设置sched字段，其中会指出当函数执行之后，跳转至goexit函数，实现扫尾工作，通过设置sched.pc字段实现；**返回新的G**。
-- runqput：把得到的**G添加到当前P的就绪队列中**，如果满了，添加至sched的全局就绪队列，判断主线程是否启动，启动之后调用wakeup。
+- runqput：把得到的**G添加到当前P的就绪队列中**，如果满了，添加至sched的全局就绪队列，判断主线程是否启动(即判断是否已经到了执行用户程序的那一步)，启动之后调用wakeup。
 - wakeup：寻找合适的P执行刚刚得到的G，这里包括判断是否有M在尝试窃取工作，如果没有(就说明其他的M要么在闲的没事干，要么压根没创建别的M)，则调用startm。
 - startm：尝试获取一个空闲的P，获取不到说明此时程序挺忙的，返回就行，由当前P自行处理或者等着被窃取。如果**得到了P**，则**尝试为它分配一个M**，这里包括去全局空闲M列表获取，并绑定P到它的nextp上，**或者创建一个新的M**；新建一个M涉及到很多步骤，包括**分配新的M的空间**，**开辟G0的空间**，并**绑定G0到M**，然后调用**newosproc去执行M的实际创建**，包括**调用pthread_create并把mstart作为线程入口函数**(就是线程启动时会执行的函数)**传进去**，然后绑定nextp；调用notewakeup唤醒M去执行。
 - mstart：newproc结束之后，调用mstart方法(这种方式只会在初始执行时出现，因为M已经通过汇编创建，所以不是上述的常规流程那种会自动执行mstart)，启动main goroutine，此方法仅允许G0执行；mstart会调用mstart1，然后经过一堆处理，调用**schedule**方法，进入实际的调度。
