更新了细节

--- a/advance/doc/1.md
+++ b/advance/doc/1.md
@@ -1363,7 +1363,7 @@ type mheap struct {
 	allspans  []*mspan                 // 所有由mheap分配出去的mspans
 	arenas    [M]*[N]*heapArena        // arenas数组，是个二维的
 	allArenas []uint                   // 到所有已经映射到内存空间的heapArena的索引的切片
-	central   [numSpanClasses]struct { // mcentral数组
+	central   [68 * 2]struct { // mcentral数组
 		mcentral mcentral
 		pad      [K]byte
 	}
