更新了错别字

--- a/advance/doc/1.md
+++ b/advance/doc/1.md
@@ -1391,11 +1391,11 @@ type heapArena struct {
 
 最后来看一些分配上的细节问题。首先是size class编号类型是一个uint8类型的数字，它的前7位表示ID，最后一位表示与此size class相关的mspan或者mcentral是否包含指针。
 
-当mspan的object空间不够时，会尝试从mcentral获取，这里获取到之后**直接替换当前mcache中对应的mspan，以此实现扩展空间的目的**，并不是把新的页追加到当前mspan中，而是使用心得mspan去分配空间；这里有一个限制，就是被替换的旧的mspan必须没有可用空间了，且新的mspan必须至少有一个空闲object空间。
+当mspan的object空间不够时，会尝试从mcentral获取，这里获取到之后**直接替换当前mcache中对应的mspan，以此实现扩展空间的目的**，并不是把新的页追加到当前mspan中，而是使用新的mspan去分配空间；这里有一个限制，就是被替换的旧的mspan必须没有可用空间了，且新的mspan必须至少有一个空闲object空间。
 
 对于tiny区域，只有当某一tiny块上的对象全部不存活时才会触发对于这个区域的回收。
 
-当mcentral的空间也不足时，会去mheap申请新的空间，这里包括去已经存在的heapArena寻找空间以及在所有的arena都没有空间时触发一次操作系统内存分配，然后把获取到的mspan(这里返回的依旧是mspan，而不是页，不然前面也不会说它是内存挂历的基本单元了)返回给调用方。
+当mcentral的空间也不足时，会去mheap申请新的空间，这里包括去已经存在的heapArena寻找空间以及在所有的arena都没有空间时触发一次操作系统内存分配，然后把获取到的mspan(这里返回的依旧是mspan，而不是页，不然前面也不会说它是内存管理的基本单元了)返回给调用方。
 
 当mspan尝试从mcentral分配空间时，获取顺序是：清理过的partial => 未清理过的partial => 未清理过的full => grow调用获取新的空间。
 
