--- a/advance/doc/1.md
+++ b/advance/doc/1.md
@@ -679,6 +679,65 @@ panic用于程序的崩溃，它会改变程序的执行流，但是如果通过
 
 new适用于分配内存空间并赋零值，返回一个指向此空间的指针；make用于构建内建类型，比如slice，chan，map等，返回一个结构体实例。
 
+#### 匿名函数(闭包)
+
+这里最好解释一下闭包的问题，这样才可以更好的解释defer对于直接调用和传参调用的不同，首先看下面的代码：
+
+```go
+func main() {
+	closure1()
+	time.Sleep(1 * time.Second)
+	closure2()
+	time.Sleep(1 * time.Second)
+	closure3()
+	time.Sleep(1 * time.Second)
+}
+
+func closure1() {
+	work := make(chan struct{})
+	for i := 0; i < 10; i++ {
+		go func(i int) {
+			<-work
+			fmt.Println("1: ", i)
+		}(i)
+	}
+	close(work)
+}
+
+func closure2() {
+	work := make(chan struct{})
+	for i := 0; i < 10; i++ {
+		j := i
+		go func() {
+			<-work
+			fmt.Println("2: ", j)
+		}()
+	}
+	close(work)
+}
+
+func closure3() {
+	work := make(chan struct{})
+	for i := 0; i < 10; i++ {
+		go func() {
+			<-work
+			fmt.Println("3: ", i)
+		}()
+	}
+	close(work)
+}
+```
+
+前两个会乱序输出0-9，只有最后一个会全部输出10(不是9)。这就涉及到闭包上下文变量捕获的问题了。
+
+首先需要明白的是，对于上下文变量，闭包会以引用的形式进行捕获，闭包内的所有来自外部的变量，都是引用值，而非值拷贝，所以第三个函数，i在循环结束之后被更新为10，所有10个goroutine都是对这个i的引用，所以会全部读到10。
+
+而第一个示例通过函数传参的方式，把值引用阻断到了函数调用的地方，所以闭包获取的是新的值，每次调用闭包都会获取新的值，所以不存在对于同一个i的引用。
+
+第二个则是类似第一种，把值引用阻断到了闭包定义之前，完成了闭包引用变量私有化的过程。
+
+这样一来就可以很好的理解defer的传参问题了。
+
 ## Context
 
 Go的上下文(context)设计属于Go独有的一种设计。如果你曾经写过JavaWeb，应该知道Servlet的上下文传参，虽然Go的context也可以这么用，但是它更多是**为了解决多goroutine下的信号同步问题**。
