增加了阻塞调用(文件IO)的理解

--- a/advance/doc/1.md
+++ b/advance/doc/1.md
@@ -1291,6 +1291,28 @@ wait，在源码里又叫netpoll，算是核心方法了，实现不算复杂：
 
 NetPoll还有一个唤醒方法，也是很直白的：直接向通道的写端写数据即可。这样就可以触发epoll的唤醒，原理就是epoll监控的一个读fd变成可读的了。
 
+## 文件IO
+
+这里更新一点关于Go文件操作的理解。
+
+Go的文件IO在Linux上并没有什么新鲜科技，就是普通的阻塞线程+新建线程的做法，在macOS和Windows借助于Kqueue和IOCP可能会不同。严谨一点我们这里仅讨论Linux的Epoll，而不是IO_Uring。
+
+Go不仅仅是文件IO这样，阻塞的CGO调用也是如此。对于无法使用NetPoll监控的且长时间阻塞的系统调用，Go会在超时之后，剥离当前协程对应的P，创建新的M去执行P，此时阻塞的G保留在当前线程继续系统调用，直到完成。一旦调用完成，G变为就绪态等待调度。此时旧的M保留，以防后面再用。
+
+但正是因为保留了M导致可能出现M暴增。一般来说文件操作都是写到page cache的，所以速度很快，来不及到剥离M就完成了，除非显式地调用fsync之类的方法要求落盘。此外内存不够也会触发长阻塞，因为此时只能落盘了。
+
+解决措施就很简单，增大内存，别用同步磁盘方法即可。在物理受限时，考虑自建线程池，提交IO任务，手动控制创建的线程数量也是一种方案，但是这需要CGO配合，因为Go拦截了所有的系统调用(阻塞的)，你绕不过去，只能用CGO。具体措施如下：
+
+- 创建IO任务，提交到任务chan
+- 消费协程拉取任务chan，提交给用CGO实现的文件操作后端
+- 文件操作后端使用glibc或者什么执行文件IO
+- 文件IO完成之后提交到完成chan
+- 协程收割完成chan
+
+上述逻辑其实很像io_uring。
+
+此外快速释放旧M的方法就是调用runtime.LockOSThread，绑定阻塞调用的协程和M，并且不释放，这样在G执行完，runtime发现G和M绑定且没解绑，G完成了之后只能把M也销毁。
+
 ## 系统监控
 
 Go程序在启动时，会单独开辟一个M去执行sysmon方法，即执行系统监控。这里的sysmon是不需要P来作为处理器的，它是直接跑在额外的M上。
